[gd_scene load_steps=3 format=3 uid="uid://dq7jc2bb3lxnc"]

[ext_resource type="Theme" uid="uid://n7d22alloqdb" path="res://resources/default.tres" id="1_6qhff"]
[ext_resource type="Script" uid="uid://b7u8vf6gsjlt2" path="res://scripts/player_select.gd" id="2_iu05h"]

[node name="PlayerSelect" type="Node2D"]
script = ExtResource("2_iu05h")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_left = -122.0
offset_top = -87.0
offset_right = 123.0
offset_bottom = 96.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -32.0
offset_right = 32.0
offset_bottom = 112.0
theme = ExtResource("1_6qhff")

[node name="UnoPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1 Player"

[node name="DosPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "2 Player"

[node name="TresPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "3 Player"

[node name="CuatroPlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "4 Player"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -7
position = Vector2(0, -84)
amount = 10
lifetime = 2.0
emission_shape = 3
emission_rect_extents = Vector2(120, 1)
gravity = Vector2(0, 100)
scale_amount_min = 0.5
scale_amount_max = 3.0

[connection signal="pressed" from="VBoxContainer/UnoPlayer" to="." method="_on_uno_player_pressed"]
[connection signal="pressed" from="VBoxContainer/DosPlayer" to="." method="_on_dos_player_pressed"]
[connection signal="pressed" from="VBoxContainer/TresPlayer" to="." method="_on_tres_player_pressed"]
[connection signal="pressed" from="VBoxContainer/CuatroPlayer" to="." method="_on_cuatro_player_pressed"]
